<resources>
    <string name="icon_app_name">CAtS</string>
    <string name="app_name">Coding Among The Stars</string>
    <string name="deck">Deck</string>
    <string name="card">card</string>
    <string name="start_spanish">COMENZAR</string>
    <string name="start_english">START</string>
    <string name="ar_alert_spanish">No se ha podido acceder a la Realidad Aumentada, ¿tienes la extensión "Coding Among the Stars AR" instalada?</string>
    <string name="ar_alert_english">Unable to access Augmented Reality, do you have the "Coding Among the Stars AR" DLC installed?</string>
    <string name="ar_alert_button_spanish">CERRAR</string>
    <string name="ar_alert_button_english">CLOSE</string>
    <string name="easy_level_spanish">NIVEL FÁCIL</string>
    <string name="easy_level_english">EASY LEVEL</string>
    <string name="medium_level_spanish">NIVEL MEDIO</string>
    <string name="medium_level_english">MEDIUM LEVEL</string>
    <string name="hard_level_spanish">NIVEL DIFÍCIL</string>
    <string name="hard_level_english">HARD LEVEL</string>
    <string name="finish_spanish">SALIR</string>
    <string name="finish_english">EXIT</string>
    <string name="retry_spanish">REINTENTAR</string>
    <string name="retry_english">RETRY</string>
    <string name="yes_spanish">SÍ</string>
    <string name="yes_english">YES</string>
    <string name="no">NO</string>
    <string name="kotlin_button">Choose Kotlin in selection character screen</string>
    <string name="ruby_button">Choose Ruby in selection character screen</string>
    <string name="back_button">Return to prevoius screen</string>
    <string name="help_button">Learn how to play</string>
    <string name="restart_button_spanish">REINICIAR</string>
    <string name="restart_button_english">RESET</string>
    <string name="discard_label_spanish">DESCARTADAS</string>
    <string name="discard_label_english">DISCARDED</string>
    <string name="path_image">Image of the path</string>
    <string name="ok_button_spanish">"ENTENDIDO"</string>
    <string name="ok_button_english">"GOT IT"</string>
    <string name="alert_playing_card_spanish">Roba una carta antes de usar otra</string>
    <string name="alert_playing_card_english">Draw a card before using another</string>
    <string name="deck_roll_button_error_spanish">No puedes robar más cartas</string>
    <string name="deck_roll_button_error_english">You can not draw any more cards</string>
    <string name="playing_card_error_spanish">No puedes usar esa carta</string>
    <string name="playing_card_error_english">You can not use that card</string>
    <string name="move_error_spanish">No puedes moverte hacia ahí</string>
    <string name="move_error_english">you can not move there</string>
    <string name="ar_selection_text_spanish_1">¿Quieres jugar con Realidad Aumentada?</string>
    <string name="ar_selection_text_spanish_2">(Se necesita tener el juego de cartas y la extensión de Coding Among the Stars instalada)</string>
    <string name="ar_selection_text_english_1">Do you want to play with Augmented Reality?</string>
    <string name="ar_selection_text_english_2">(You need to have the card game and the Coding Among the Stars DLC installed)</string>
    <string name="character_selection_text_spanish">Selecciona al personaje al que quieres ayudar</string>
    <string name="character_selection_text_english">Choose the character that you want to help</string>
    <string name="level_selection_text_spanish">Selecciona el nivel al que quieres jugar</string>
    <string name="level_selection_text_english">Choose the level that you want to play</string>
    <string name="lost_screen_text_spanish_1">¡Oh, no! ¡Backdoor y Bug se han salido con la suya!</string>
    <string name="lost_screen_text_spanish_2">¿Quieres volver a intentarlo?</string>
    <string name="lost_screen_text_english_1">Oh, no! Backdoor and Bug won!</string>
    <string name="lost_screen_text_english_2">Do you want to try it again?</string>
    <string name="win_screen_text_spanish_1">¡Enhorabuena! ¡Has conseguido llegar a Bitrise!</string>
    <string name="win_screen_text_spanish_2">¿Quieres intentar otro nivel?</string>
    <string name="win_screen_text_english_1">Congrats! You have made it to Bitrise!</string>
    <string name="win_screen_text_english_2">Do you want to play another level?</string>
    <string name="help_screen_title_spanish"> AYUDA</string>
    <string name="help_screen_text_spanish">Kotlin y Ruby eran dos alienígenas que habían vivido pacíficamente en el planeta Bitrise toda su vida, hasta que un día, el malvado Backdoor invadió su hogar. Backdoor había venido a Bitrise en busca de recursos valiosos y no estaba dispuesto a dejar que nada ni nadie se interpusiera en su camino. Algunos alienígenas que vivían en Bitrise decidieron aliarse con el villano y así nacieron los secuaces de Backdoor: los Bugs. Pero Kotlin y Ruby no iban a permitir que su planeta fuera destruido sin luchar. \n \n Los dos hermanos se unieron para enfrentarse a Backdoor y sus secuaces. Backdoor tiene el poder de duplicarse, pero Kotlin es un experto en tecnología y programación, mientras que Ruby es una guerrera valiente y astuta. \n \n ¿Conseguirán Kotlin y Ruby enfrentarse a los Bugs, sortear los Firewalls y derrotar al malvado Backdoor para convertirse en héroes de su planeta, ganarse el respeto y admiración de los habitantes y devolver la paz y la tranquilidad a Bitrise? \n \n Para ayudarles a llegar hasta Bitrise, ¡crea tu propio algoritmo con las cartas de giro y avanzar! Pero no olvides los requisitos: \n \t 1º Jugar una carta \n \t 2º Robar una nueva carta \n \n En caso de que no pudieras jugar ninguna carta, puedes descartar todas las que tengas en la mano pulsando el botón de la papelera. \n  \n Si te quedas atascado, puedes empezar de nuevo la partida dándole a "Reiniciar".</string>
    <string name="help_screen_title_english"> HELP</string>
    <string name="help_screen_text_english">Kotlin and Ruby were two aliens who had lived peacefully on the planet Bitrise all their lives, until one day, the evil Backdoor invaded their home. Backdoor had come to Bitrise in search of valuable resources and was unwilling to let anything or anyone stand in his way. Some aliens living in Bitrise decided to ally with the villain and this is how Backdoor\'s minions were born: the Bugs. But Kotlin and Ruby were not going to let their planet be destroyed without a fight. \n \n The two brothers teamed up to take on Backdoor and his minions. Backdoor has the power to duplicate itself, but Kotlin is an expert in technology and programming, while Ruby is a brave and cunning warrior. \n \n Will Kotlin and Ruby be able to face the Bugs, overcome the Firewalls and defeat the evil Backdoor to become heroes of their planet, earn the respect and admiration of the inhabitants and restore peace and tranquility to Bitrise? \n \n To help them get to Bitrise, create your own algorithm with the turn and advance cards! But don\'t forget the requirements: \n \t 1st Play a card \n \t 2nd Draw a new card \n \n In case you couldn\'t play any card, you can discard all the cards you have in your hand by pressing the button the trash can. \n \n If you get stuck, you can start the game again by clicking "Restart".</string>
</resources>