<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/text_background">

    <TextView
        android:id="@+id/characterSelectionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/zcool_qingke_huangyou"
        android:text="@string/character_selection_text_spanish"
        android:textColor="#FFFFFF"
        android:textSize="58sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/kotlinButton"
        android:contentDescription="@string/kotlin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/rubyButton"
        app:layout_constraintRight_toLeftOf="@+id/rubyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/kotlin_400x400" />

    <ImageView
        android:id="@+id/rubyButton"
        android:contentDescription="@string/ruby_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ruby_400x400" />

    <ImageView
        android:id="@+id/backCharactersButton"
        android:contentDescription="@string/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>