<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/text_background">


    <TextView
        android:id="@+id/arSelectionTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/zcool_qingke_huangyou"
        android:text="@string/ar_selection_text_spanish_1"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toEndOf="@+id/backARButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/arSelectionTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/zcool_qingke_huangyou"
        android:text="@string/ar_selection_text_spanish_2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/yesARButton"
        app:layout_constraintStart_toStartOf="@+id/arSelectionTextView1"
        app:layout_constraintTop_toBottomOf="@+id/arSelectionTextView1"
        app:layout_constraintEnd_toEndOf="@+id/arSelectionTextView1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/yesARButton"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button"
        android:fontFamily="@font/zcool_qingke_huangyou"
        android:text="@string/yes_spanish"
        android:textSize="65sp"
        app:layout_constraintBottom_toTopOf="@+id/mediumLevelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/noARButton"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:fontFamily="@font/zcool_qingke_huangyou"
        android:text="@string/no"
        android:textSize="65sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/yesARButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/yesARButton"
        app:layout_constraintTop_toBottomOf="@+id/yesARButton" />

    <ImageView
        android:id="@+id/backARButton"
        android:contentDescription="@string/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>