<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/board_background">

    <ImageView
        android:id="@+id/backGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

    <ImageView
        android:id="@+id/trashButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/helpGameButton"
        app:layout_constraintEnd_toStartOf="@+id/helpGameButton"
        app:layout_constraintTop_toTopOf="@+id/helpGameButton"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/trash_button" />

    <TextView
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:background="@drawable/restart_button"
        android:fontFamily="@font/zcool_qingke_huangyou"
        android:gravity="center"
        android:text="@string/restart_button_spanish"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/trashButton"
        app:layout_constraintEnd_toStartOf="@+id/trashButton"
        app:layout_constraintTop_toTopOf="@+id/trashButton"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/helpGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help_button" />

    <ImageView
        android:id="@+id/livesCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toEndOf="@id/backGameButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/life_three"
        tools:ignore="ImageContrastCheck" />


    <ImageView
        android:id="@+id/deckButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/deck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482"
        app:srcCompat="@drawable/card_back" />

    <TextView
        android:id="@+id/discard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/discard_label"
        android:fontFamily="@font/zcool_qingke_huangyou"
        android:text="@string/discard_label_spanish"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imgViewDiscardDeck"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgViewDiscardDeck"
        app:layout_constraintTop_toBottomOf="@+id/imgViewDiscardDeck" />

    <ImageView
        android:id="@+id/imgViewDiscardDeck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/deckButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/deckButton"
        app:layout_constraintTop_toTopOf="@+id/deckButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/discard_deck" />

    <ImageView
        android:id="@+id/sound_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/helpGameButton"
        app:layout_constraintStart_toStartOf="@+id/helpGameButton"
        app:srcCompat="@drawable/sound_on" />

    <TableLayout
        android:id="@+id/gameTableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116"></TableLayout>

    <LinearLayout
        android:layout_width="678dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgViewCard1"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:contentDescription="card"
            app:srcCompat="@drawable/card_back" />

        <ImageView
            android:id="@+id/imgViewCard2"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginStart="64dp"
            android:contentDescription="card"
            app:srcCompat="@drawable/card_back" />

        <ImageView
            android:id="@+id/imgViewCard3"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginStart="64dp"
            android:contentDescription="card"
            app:srcCompat="@drawable/card_back" />

        <ImageView
            android:id="@+id/imgViewCard4"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginStart="64dp"
            android:contentDescription="card"
            app:srcCompat="@drawable/card_back" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>